# lenny-gui-opengl

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: CMakeLists.txt
data/shaders/: shader.frag
source/: CMakeLists.txt
source/apps/: CMakeLists.txt
source/apps/TestApp/: main.cpp
source/apps/TestApp/config/car/: Futuristic_Car.mtl
source/apps/TestApp/config/gripper/: Gripper.mtl
source/apps/TestApp/config/nao/: 12211_Robot_l2.mtl
source/apps/TestApp/config/yumi/: Base.mtl
source/apps/TestApp/include/: TestApp.h
source/apps/TestApp/src/: TestApp.cpp
source/apps/docking/: CMakeLists.txt  main.cpp
source/apps/interpolation/: CMakeLists.txt  main.cpp
source/apps/interpolation/include/: InterpolationApp.h
source/apps/interpolation/src/: InterpolationApp.cpp
source/apps/muster/: CMakeLists.txt  main.cpp
source/apps/muster/include/: MusterApp.h
source/apps/muster/src/: MusterApp.cpp
source/apps/renderToTexture/: CMakeLists.txt  Passthrough.vertexshader  Texture.fragmentshader  main.cpp
source/apps/renderToTexture/common/: shader.cpp  text2D.cpp  texture.cpp
source/apps/test/: CMakeLists.txt
source/apps/test/include/: TestApp.h
source/apps/test/src/: TestApp.cpp
source/gui/: CMakeLists.txt
source/gui/data/ground/: ground.mtl
source/gui/data/shaders/: shader.vert
source/gui/include/lenny/gui/: Application.h  Camera.h  Ground.h  Gui.h  Guizmo.h  ImGui.h  ImGuizmo.h  Light.h  Model.h  Plot.h  Process.h  Renderer.h  Scene.h  Shader.h  Shaders.h  Utils.h
source/gui/src/: Application.cpp  Camera.cpp  Ground.cpp  Gui.cpp  Guizmo.cpp  ImGui.cpp  ImGuizmo.cpp  Light.cpp  Model.cpp  Plot.cpp  Process.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Shaders.cpp  Utils.cpp
